--- a/contacto.html
+++ b/contacto.html
@@ -66,7 +66,7 @@
       </nav>
 
 
-      <div  class="container px-4 py-5" id="container1">
+      <div  class="container px-4 py-5 text-center" id="container1">
        
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
           <div class="feature col">
@@ -109,7 +109,8 @@
 
 
       <div class="container-fluid text-center">
-        <iframe class="rounded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.879038306444!2d-6.392198725550352!3d39.47206131259506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd15dfe12539bea1%3A0x72645ee05e4f1b27!2sAv.%20Ruta%20de%20la%20Plata%2C%2026%2C%20Oeste%2C%2010001%20C%C3%A1ceres!5e0!3m2!1ses!2ses!4v1716457855640!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe id="map" class="rounded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.879038306444!2d-6.392198725550352!3d39.47206131259506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd15dfe12539bea1%3A0x72645ee05e4f1b27!2sAv.%20Ruta%20de%20la%20Plata%2C%2026%2C%20Oeste%2C%2010001%20C%C3%A1ceres!5e0!3m2!1ses!2ses!4v1716457855640!5m2!1ses!2ses" 
+       style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
           <!-- footer -->
