--- a/contacto.html
+++ b/contacto.html
@@ -13,12 +13,14 @@
     <link rel="stylesheet" href="./contacto.css">
 </head>
 <body>
-    <header></header>
+    
+    <header>
     <div class="mt-5 mb-3 text-center">
         <img id="logo2" class="d-block mx-auto rounded-3" src="./assets/logo-remove.png" alt="logo">
-        <div class="col-lg-6 mx-auto">
-        </div>
     </div>
+    </header>
+
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="btn" href="https://www.instagram.com/deliciasymanjarex?igsh=MTRkaHhwODc3M3IweQ==">
@@ -46,6 +48,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Frios</a></li>
                         <li><a class="dropdown-item" href="#">Calientes</a></li>
+                        <li><a class="dropdown-item" href="#">Postres</a></li>
                         <li><a class="dropdown-item" href="#">Postres</a></li>
                     </ul>
                 </li>
@@ -117,11 +120,10 @@
     <div class="container">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Platos</a></li>
-                <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Sobre nosotros</a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+                <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
+                <li class="nav-item"><a href="./faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+                <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-body-secondary">Sobre nosotros</a></li>
             </ul>
             <p class="text-center text-body-secondary">© 2024 Delicias & ManjarEx</p>
         </footer>
