--- a/index.html
+++ b/index.html
@@ -227,11 +227,10 @@
     <div class="container">
       <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Platos</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contacto</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Sobre nosotros</a></li>
+              <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+              <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
+              <li class="nav-item"><a href="./faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+              <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-body-secondary">Sobre nosotros</a></li>
           </ul>
           <p class="text-center text-body-secondary">© 2024 Delicias & ManjarEx</p>
       </footer>
