--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Platos</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Frios</a></li>
+                        <li><a class="dropdown-item" href="./frios.html">Frios</a></li>
                         <li><a class="dropdown-item" href="#">Calientes</a></li>
                         <li><a class="dropdown-item" href="#">Postres</a></li>
                         <li><a class="dropdown-item" href="#">Postres</a></li>
