--- a/faqs.html
+++ b/faqs.html
@@ -16,8 +16,9 @@
 
 
     <header>
-        <div class="mt-5 mb-3 text-center">
-            <img id="logo2" class="d-block mx-auto rounded-3" src="./assets/logo-remove.png" alt="logo">
+        <div class="text-center bg-light" ">
+            <div id="containerlogo2" class="mt-3 mb-3 ">
+            <img id="logo2" class="d-block mx-auto rounded-3 " src="./assets/logo-remove.png" alt="logo"></div>
         </div>
         </header>
     <!-- Barra de navegación -->
@@ -48,7 +49,7 @@
                 <a class="nav-link dropdown-toggle"  data-bs-toggle="dropdown"
                     aria-expanded="false">Platos</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Frios</a></li>
+                    <li><a class="dropdown-item" href="./frios.html">Frios</a></li>
                     <li><a class="dropdown-item" href="#">Calientes</a></li>
                     <li><a class="dropdown-item" href="#">Postres</a></li>
                 </ul>
