--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- header -->
-    <div class="mt-5 mb-3 text-center">
+    <div class="mt-3 mb-3 text-center">
         <img id="logo" class="d-block mx-auto" src="./assets/logo.jpg" alt="logo">
         <div class="col-lg-6 mx-auto">
         </div>
@@ -50,7 +50,7 @@
                 <a class="nav-link dropdown-toggle"  data-bs-toggle="dropdown"
                     aria-expanded="false">Platos</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Frios</a></li>
+                    <li><a class="dropdown-item" href="./frios.html">Frios</a></li>
                     <li><a class="dropdown-item" href="#">Calientes</a></li>
                     <li><a class="dropdown-item" href="#">Postres</a></li>
                 </ul>
