--- a/contacto.html
+++ b/contacto.html
@@ -47,9 +47,9 @@
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Platos</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./frios.html">Frios</a></li>
-                        <li><a class="dropdown-item" href="#">Calientes</a></li>
-                        <li><a class="dropdown-item" href="#">Postres</a></li>
-                        <li><a class="dropdown-item" href="#">Postres</a></li>
+                        <li><a class="dropdown-item" href="./calientes.html">Calientes</a></li>
+                        <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
+                        <li><a class="dropdown-item" href="./out.html">Fuera de carta</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
