--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Delicias y ManjarEx</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
   
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -51,8 +54,9 @@
                     aria-expanded="false">Platos</a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./frios.html">Frios</a></li>
-                    <li><a class="dropdown-item" href="#">Calientes</a></li>
-                    <li><a class="dropdown-item" href="#">Postres</a></li>
+                    <li><a class="dropdown-item" href="./calientes.html">Calientes</a></li>
+                    <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
+                    <li><a class="dropdown-item" href="./out.html">Fuera de carta</a></li>
                 </ul>
             </li>
             <li class="nav-item dropdown">
@@ -72,6 +76,9 @@
     </div>
   </nav>
   
+
+  <!-- contenido -->
+
     <div id="container2">
         <div class="text-center border-bottom">
             <br>
@@ -164,7 +171,7 @@
                     <div class="card shadow-sm">
                       <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="./assets/t.red.jpg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                       <div class="card-body">
-                        <p class="card-text"><strong>Tarta de chocolate</strong></p>
+                        <p class="card-text"><strong>Red Velvet</strong></p>
                         <div class="d-flex justify-content-between align-items-center">
                         </div>
                       </div>
@@ -240,6 +247,3 @@
 </body>
 
 </html>
-<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-crossorigin="anonymous"></script>
