--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Menú desplegable -->
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle"  data-bs-toggle="dropdown"
@@ -60,10 +60,10 @@
                 </ul>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                     aria-expanded="false">Menu del día</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Menu 1</a></li>
+                    <li><a class="dropdown-item" href="./menudiario.html">Menu 1</a></li>
                     <li><a class="dropdown-item" href="#">Menu 2</a></li>
                     <li><a class="dropdown-item" href="#">Menu 3</a></li>
                 </ul>
