--- a/calientes.html
+++ b/calientes.html
@@ -63,9 +63,8 @@
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
                             aria-expanded="false">Menu del día</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Menu 1</a></li>
-                            <li><a class="dropdown-item" href="#">Menu 2</a></li>
-                            <li><a class="dropdown-item" href="#">Menu 3</a></li>
+                            <li><a class="dropdown-item" href="./menudiario.html">Menu diario</a></li>
+                            <li><a class="dropdown-item" href="./menufinde.html">Menu fin de semana</a></li>
                         </ul>
                     </li>
                     <li class="nav-link">
