add menu diario

--- a/menudiario.html
+++ b/menudiario.html
@@ -100,7 +100,7 @@
 
 
         <h3 class="text-center">Primeros platos</h3>
-
+        <h6 class="text-center">Ñentejas con verduras, spaghetti a la boloñesa y ensaladilla rusa</h6>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -152,7 +152,7 @@
 
 
         <h3 class="text-center">Segundos platos</h3>
-
+        <h6 class="text-center">Pollo asado, merluza en salsa verde y filetes empanados </h6>
         <div id="carouselCaptions2" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselCaptions2" data-bs-slide-to="0" class="active"
